# pydomain

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/backup-skills/youtrack-project/: SKILL.md
.claude/memories/session/: issue-DCE-5-context.md
.claude/skills/adr-writer/: SKILL.md
.claude/skills/brief-writer/: SKILL.md
.claude/skills/diagramming/: SKILL.md
.claude/skills/diataxis-writer/: SKILL.md
.claude/skills/discovery/: SKILL.md
.claude/skills/documentation-writer/: SKILL.md
.claude/skills/gap-analysis/: SKILL.md
.claude/skills/general-guidelines/: SKILL.md
.claude/skills/general-llm-wiki-init/: SKILL.md
.claude/skills/git-conventions/: SKILL.md
.claude/skills/karpathy-coding-guidelines/: SKILL.md
.claude/skills/llm-wiki/: SKILL.md
.claude/skills/llm-wiki-init/: SKILL.md
.claude/skills/task-creation/: SKILL.md
.devin/: wiki.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/scripts/: check-commit-msg.sh
.github/workflows/: block-breaking.yml  lint-commits.yml  publish.yml  publish_to_pypi.yml  test.yml
.memsearch/memory/: 2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md
docs/adr/: ADR-001-protocol-over-abc-for-interfaces.md  ADR-002-pydantic-v2-only.md  ADR-003-async-only-public-api.md  ADR-004-exception-hierarchy-by-layer.md  ADR-005-publish-after-commit.md  ADR-006-entity-identity-semantics.md  ADR-007-entity-auto-id-with-runtime-guard.md  ADR-008-uuidv7-time-ordered-identity.md  ADR-009-domain-service-marker.md  ADR-010-specification-abc-basemodel-hybrid.md  ADR-011-domain-event-stamp-immutability.md  ADR-012-isinstance-dispatch-in-aggregates.md  ADR-013-factory-vs-reconstitution-factory.md  ADR-014-frozen-commands-queries.md  ADR-015-typed-command-query-generics.md  ADR-016-handler-signature-asymmetry.md  ADR-017-onion-style-pipeline-behaviors.md  ADR-018-missing-sentinel-idempotency.md  ADR-019-sorted-lock-keys-deadlock-prevention.md  ADR-020-commandbus-owns-uow-lifecycle.md  ADR-021-correlation-causation-propagation.md  ADR-022-integration-events-primitive-payloads.md  ADR-023-integration-event-bypasses-id-generator.md  ADR-024-two-projection-types.md  ADR-025-projection-split-across-layers.md  ADR-026-no-generic-readstore.md  ADR-027-saga-state-as-aggregate-root.md  ADR-028-saga-on-dsl.md  ADR-029-generic-saga-parameterized-by-state.md  ADR-030-saga-registry-auto-binding.md  ADR-031-saga-manager-separate-orchestrator.md  ADR-032-saga-correlation-propagation.md  ADR-033-lifo-compensation-stack.md  ADR-034-saga-suspension-with-timeout.md  ADR-035-crash-recovery-pending-commands.md  ADR-036-saga-idempotency-processed-events.md  ADR-037-eventstream-frozen-value-object.md  ADR-038-dual-mode-event-application.md  ADR-039-convention-dispatch-projections.md  ADR-040-event-sourced-repository-concrete-base.md  (+22 more)
docs/arch42/: 01-introduction-and-goals.md  02-constraints.md  03-context-view.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-concepts.md  09-design-decisions.md  10-quality.md  11-risks.md  12-glossary.md
docs/diataxis/: introduction.md
docs/others/: commit_and_release_guide.md
src/ddd_cqrs_es/: __init__.py
src/pydomain/: __init__.py
tests/: test_aggregate_root.py  test_architecture.py  test_domain_service.py  test_entity.py  test_exceptions.py  test_factory.py  test_package_exports.py  test_repository.py  test_specification.py  test_value_object.py
tests/cqrs/: conftest.py  test_behaviors.py  test_bus.py  test_commands.py  test_exceptions.py  test_handlers.py  test_integration_events.py  test_locking.py  test_pipeline.py  test_projection.py  test_queries.py  test_query_bus.py  test_query_handlers.py  test_unit_of_work.py
tests/ddd/: test_domain_event.py  test_domain_event_version.py  test_domain_service.py  test_entity.py  test_exceptions.py  test_id_generator.py  test_repository.py  test_specification.py
tests/es/: conftest.py  test_aggregate_snapshot.py  test_checkpoint_store.py  test_event_sourced_aggregate.py  test_event_sourced_repository.py  test_event_store.py  test_event_stream.py  test_exceptions.py  test_fake_event_store.py  test_projection.py  test_snapshot.py  test_snapshot_policy.py  test_snapshot_schema_version.py  test_subscription_runner.py  test_upcasting.py  test_upcasting_pipeline.py
tests/infrastructure/: conftest.py  test_bootstrap.py  test_event_registry.py  test_event_registry_upcasting.py  test_inbound_event_gateway.py  test_message_broker.py  test_message_bus.py  test_message_subscriber.py
tests/saga/: __init__.py  conftest.py  test_durability.py  test_exceptions.py  test_flows.py  test_hydrate.py  test_interruption.py  test_manager.py  test_pruning_policy.py  test_recovery.py  test_registry.py  test_saga.py  test_saga_behaviors.py  test_saga_fail_declarative.py  test_saga_fail_edge_cases.py  test_saga_issues.py  test_saga_new_features_integration.py  test_saga_resume_declarative.py  test_saga_resume_edge_cases.py  test_saga_timeout_defaults.py  test_saga_timeout_edge_cases.py  test_state.py  test_tracing.py
tests/testing/: test_fake_processed_command_store.py  test_fake_unit_of_work.py  test_in_memory_event_store.py
(+243 files in other folders)
