[project]
name = "pydomain-lib"
version = "0.2.2"
description = "DDD, CQRS & Event Sourcing Building Blocks library for Python"
readme = "README.md"
authors = [
    { name = "Myron Gourlis", email = "myrgourlis@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "uuid-utils>=0.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Source Code" = "https://github.com/mgourlis/pydomain"
"Bug Tracker" = "https://github.com/mgourlis/pydomain/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-anyio>=0.0.0",
    "pytest-archon>=0.0",
    "anyio>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydomain"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]
# Convert relative markdown links to absolute GitHub URLs
# Convert relative image links to raw GitHub URLs
regex = [
    {pattern = '(?<=\\[.*?\\]\\()(\\.\\.?\\/.*?\\.md)', replacement = 'https://github.com/mgourlis/pydomain/blob/main/\1'},
    {pattern = '(?<=\\!\\[.*?\\]\\()(\\.\\.?\\/.*?\\.(png|jpg|svg))', replacement = 'https://raw.githubusercontent.com/mgourlis/pydomain/main/\1'},
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pydomain --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
branch = true
source = ["src/pydomain"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_any_unimported = false
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
